# VIPER_Sphinx_container

./: .dockerignore  .gitignore  ARCHITECTURE.md  Apache 2.0 LICENSE.md  BUILD_INSTRUCTIONS.md  CHANGELOG.md  Contributor License Agreement (CLA).md  Dockerfile  Makefile  PROJECT_SUMMARY.md  README.md  build.bat  build.sh  constraints-windows.txt  docker-compose.yml  fix_doc_links.py  generate_pdoc.py  prompt.txt  pyproject.toml  requirements-docker.txt  requirements-windows.txt  requirements.txt  run_test.bat  setup_test.bat  sphinx-helper.bat  sphinx-helper.sh  start-server.sh  update_versions.py  validate_manual_links.py
docs/: conf.py  doxygen-breathe-exhale.rst  doxygen-usage.rst  extensions.rst  index.rst  quick-reference.rst  sphinx-basics.rst  sphinx-packages.rst  themes.rst  urlparse.py
docs/_static/: custom.css  custom.js
docs/examples/: N2G-example.rst  ansible-sphinx-example.rst  api-docs-example.rst  basic-example.rst  blockdiag-example.rst  breathe-example.rst  btd-sphinx-graphviz-example.rst  code2flow-example.rst  diagrams-example.rst  doc8-example.rst  dtreeplt-example.rst  enumerate-markdown-example.rst  epub2sphinx-example.rst  eralchemy2-example.rst  exhale-example.rst  flake8-markdown-example.rst  fsmdot-example.rst  furo-example.rst  gprof2dot-example.rst  graphviz-example.rst  graphviz2drawio-example.rst  index.rst  invoke-sphinx-example.rst  jupyter-example.rst  karma-sphinx-theme-example.rst  markdown-example.rst  markdown-it-py-example.rst  myst-nb-example.rst  myst-parser-example.rst  nbsphinx-example.rst  nbsphinx-link-example.rst  nwdiag-example.rst  package-examples.rst  piccolo-theme-example.rst  pinout-example.rst  pyan3-example.rst  pydantic-sphinx-example.rst  pydata-sphinx-theme-example.rst  pydeps-example.rst  pydot-example.rst  (+116 more)
docs/examples/_charts/: market-pie.json  sales-bar.json  temperature-line.json
docs/examples/sphinx-autodoc-defaultargs/: utils.py
docs/examples/sphinx_automodapi_mylib/: __init__.py  api.rst  processors.py  readers.py  writers.py
docs/tutorials/: doxygen-breathe-exhale.rst  doxygen-usage.rst  extensions.rst  index.rst  package-tutorials.rst  sphinx-basics.rst  themes.rst
