[project]
name = "viper-sphinx-container"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "Sphinx>=9.1.0",
    "pdoc3",
    "sphinx-autodoc-defaultargs",
    "sphinx-autodoc-annotation",
    "sphinx-autodoc2-fern",
    "sphinx-collapsible-autodoc",
    "sphinx-autodoc-toml",
    "sphinx-automodapi",
    "sphinx-autoapi",
    "sphinx-c-autodoc",
    "sphinx-vhdl",
    "breathe",
    "sphinx-doxysummary",
    "sphinx-icontract",
    "exhale",
    "pytest-doctestplus",
    "sphinxcontrib-httpdomain",
    "sphinx-apischema",
    "sphinx-jsonschema",
    "sphinx-sql",
    "pydeps",
    "sphinx-needs",
    "sphinx-diagrams",
    "sphinx-autoschematics",
    "sphinx-pyreverse",
    "sphinx-uml",
    "btd.sphinx.graphviz",
    "pyan3",
    "graphviz",
    "pydot",
    "gprof2dot",
    "python-markdown-graphviz",
    "quickdiagrams",
    "dtreeplt",
    "pyprojectviz",
    "pylint",
    "code2flow",
    "snakeviz",
    "diagrams",
    "railroad-diagrams",
    "blockdiag",
    "nwdiag",
    "rptree",
    "pinout",
    "sphinxcontrib-mermaid",
    "sphinxcontrib-plantuml",
    "sphinxcontrib-blockdiag",
    "sphinxcontrib-seqdiag",
    "sphinxcontrib-nwdiag",
    "sphinxcontrib-actdiag",
    "sphinxcontrib-tikz",
    "sphinx-gherkin",
    "sphinx-gherkindoc",
    "nbsphinx",
    "nbsphinx-link",
    "sphinx-jupyter-kernel",
    "myst-parser",
    "sphinx-confluence",
    "sphinx2doxygen",
    "epub2sphinx",
    "sphinx-tojupyter",
    "sphinx-readme",
    "sphinx-copybutton",
    "sphinx-prompt",
    "sphinxemoji",
    "sphinx-favicon",
    "sphinx-hoverxref",
    "sphinx-notfound-page",
    "sphinx-version-warning",
    "cartouche",
    "sphinx-git",
    "sphinx-last-updated-by-git",
    "sphinx-issues",
    "sphinx-gitref",
    "sphinx-changelog",
    "sphinx-tagtoctree",
    "sphinx-library",
    "sphinx-refdoc",
    "sphinx-autoindex",
    "sphinx-autopackagesummary",
    "sphinxcontrib-asyncio",
    "sphinxcontrib-googlemaps",
    "sphinx-kml",
    "ansible-sphinx",
    "invoke-sphinx",
    "sphinx-graphql",
    "sphinx-autobuild",
    "hatch-sphinx",
    "sphinx-lint",
    "sphinx-analytics",
    "sphinx-autofixture",
    "sphinx-advanced",
    "sphinxcontrib-openapi",
    "sphinxcontrib-redoc",
    "sphinxcontrib-websupport",
    "sphinxcontrib-restbuilder",
    "sphinx-gallery",
    "sphinx-codeautolink",
    "sphinx-thebe",
    "eralchemy2",
    "sqlalchemy",
    "sphinx-asdf",
    "doc8",
    "rstcheck",
    "sphinxcontrib-spelling",
    "sphinx-intl",
    "sphinx-polyversion",
    "rst2pdf",
    "rinohtype",
    "bfabio-sphinx-rst-builder",
    "sphinxcontrib-katex",
    "sphinxcontrib-bibtex",
    "sphinx-multiversion",
    "sphinx-versions",
    "sphinx-comments",
    "sphinxcontrib-contentui",
    "sphinx-terraform",
    "sphinx-sitemap",
    "sphinx-tags",
    "sphinx-argparse",
    "sphinx-click",
    "sphinxcontrib-typer",
    "sphinx-pydantic",
    "sphinx-toolbox",
    "rst-pypi-ref",
    "sphinx-rtd-theme",
    "sphinx-book-theme",
    "pydata-sphinx-theme",
    "furo",
    "piccolo-theme",
    "sphinx-material",
    "sphinx-press-theme",
    "karma-sphinx-theme",
    "sphinxawesome-theme",
    "sphinx-immaterial",
    "sphinx-wagtail-theme",
    "sphinx-theme",
    "sphinxnotes-fasthtml",
    "markdown",
    "enumerate-markdown",
    "flake8-markdown",
    "markdown-it-py",
    "myst-nb",
    "sphinx-markdown-tables",
    "sphinx-panels",
    "sphinx-design",
    "sphinx-togglebutton",
    "sphinx-tabs",
    "sphinx-inline-tabs",
    "svg.py",
    "requests",
    "beautifulsoup4",
    "lxml",
    "jinja2",
    "docutils",
]
